# sctuner2.0

./: .gitattributes  .gitignore  README.md  RUNNING_SCENARIOS.md  pyproject.toml
configs/: environment.yml  pipeline_presets.yaml  project_config.local.yaml.example  project_config.yaml
docs/: README.md  Stage3 插件 V5 升级设计报告：智能去噪与生态位拯救.md  current_positioning.md  hln_cd4_treg_missing_detection_limitation.md  插件统一接口规范api.md
dosc/: SVG 插件问题解决报告.md  SVTuner.md  Stage3 插件 V4.1–V4.4 升级设计报告.md  Stage3 插件 V5 升级设计报告：智能去噪与生态位拯救.md  Stage5_V2.1设计思路.md  Stage6 真实数据审计设计.md  Stage7 可视化与报告模块设计.md  主文强证据图设计.md  多场景指标汇总.md  指标汇总表.md  插件统一接口规范api.md  消融实验.md  空间真值可视化图像设计.md  阶段三：细胞类型不匹配  Unknown-aware 模块.md  阶段二：SVG+HVG 动态加权插件.md  阶段四、阶段五和 SimGen 阶段的详细设计方案.md  阶段四问题简述.md
r_scripts/: stage1_preprocess.R
scripts/: aggregate_seed_summary.py  analyze_false_positives.py  audit_sha1.py  auto_tune_support_threshold.py  auto_tune_weak_th.py  build_assigned_expression_from_stage1.py  build_cytospace_fig2c_profile_mask_sample.py  build_cytospace_fig2d_profile_mask_sample.py  build_cytospace_output_from_generic_mapping.py  build_human_lung_5loc_three_row_stack.py  build_masked_scenarios_real_stack.py  build_mouse_brain_refined_three_row_stack.py  build_real_brca_three_row_stack.py  build_real_brca_v300_stack.py  build_real_profile_mask_foundation.py  build_real_st_profile_mask_sample.py  build_simulation_triptych_overview_stack.py  build_xenium_pseudospots.py  check_false_positives.py  check_st_expression.py  check_stage3_cd4.py  check_truth_types.py  cleanup_redundant_storage.py  (+66 more)
(+184 files in other folders)
